Section-5-Securing-The-Mesh/kubernetes/hello-istio-jwt-authz.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: hello-istio-jwt-authz
  namespace: hello-istio
spec:
  selector:
    matchLabels:
      app: hello-istio
  jwtRules:
  - issuer: "klevipub"
    jwksUri: "https://raw.githubusercontent.com/kmerkuri/learn-istio/main/Section-5-Securing-The-Mesh/data/jwks.json"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: hello-istio-require-jwt
  namespace: hello-istio
spec:
  selector:
    matchLabels:
      app: hello-istio
  action: ALLOW
  rules:
  - from:
    - source:
       requestPrincipals: ["packtpub/demo"]
